# draco_decoder

./: .cargoignore  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package.json
assets/: example_point_cloud.ply  mesh.drc  pointcloud.drc
assets/20/: 20.gltf
assets/20_decode/: 20.gltf
cpp/: decoder_api.cc
examples/wasm/: index.html
examples/wasm_test/: main.rs
include/: decoder_api.h
javascript/: index.es.js
src/: ffi.rs  lib.rs  utils.rs  wasm.rs
tools/: perf.sh  wasm_build.sh
