[package]
name = "draco_decoder"
version = "0.0.10"
authors = ["jiang heng <https://github.com/jiangheng90/"]
description = "a draco decoder on rust (wip)"
repository = "https://github.com/jiangheng90/draco_decoder"
homepage = "https://github.com/jiangheng90/draco_decoder"
keywords = ["draco", "decoder"]
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = [
    "third_party/draco/build/**",
    "third_party/draco/testdata/**",
    "third_party/draco/docs/**",
    "third_party/draco/javascript/**",
    "third_party/draco/maya/**",
    "third_party/draco/unity/**",
    "assets/**",
    "target/**",
    ".git/**",
    ".vscode/**",
    "examples/wasm/**",
]

[dependencies]
bytemuck = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cxx = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "console",
    "Blob",
    "HtmlScriptElement",
    "HtmlHeadElement",
    "Url",
    "Document",
] }
wasm-bindgen-futures = "0.4"
base64 = "0.21"
once_cell = "1.19"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "console",
    "Blob",
    "HtmlScriptElement",
    "HtmlHeadElement",
    "Url",
    "Document",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Performance",
] }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cxx-build = "1.0"
cc = "1.0"

[[example]]
name = "wasm_test"
path = "examples/wasm_test/main.rs"
required-features = []
